Add more docs for IntelliJ